--- a/_posts/2019-12-19-the-us-narrative-today.html
+++ b/_posts/2019-12-19-the-us-narrative-today.html
@@ -1,106 +1,128 @@
 ---
-images:
-- name: braceros-domingo-ulloa-cruise-ship-shore-log.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-cruise-ship-shore-log.jpg
-- name: border-fence-border-fence-on-hill-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-purple-pond.jpg
-- name: wreck-DSC_0076.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wreck-DSC_0076.jpg
-- name: old-granary-field-oldhouse-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-crafty-painting.jpg
-- name: sand-hand-sand-hand-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-blue-electricity.jpg
-- name: old-house-oldhouse-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-kandinsky-bv.jpg
-- name: old-door-lock-old-door-lock-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-umberto-bocc.jpg
-- name: server-cloud-server-racks-clouds-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-brush.jpg
-- name: white-house-lawn-white-house-window-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-crafty-painting.jpg
-- name: adam-smith-adam-smith-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-kand-two.jpg
-- name: beach-rocks-beach-rocks-currents-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-colorful-blocks.jpg
-- name: curtain-curtain-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-blue-granite.jpg
-- name: old-door-lock-old-door-lock-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-blue-granite.jpg
-- name: san-francisco-street-view-san-francisco-street-view-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-smooth-ride.jpg
-- name: flower-barbed-wire-flower-barbed-wire-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-dry-skin.jpg
-- name: fence-fence-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-spagetti-accident.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-diego-rivera1.jpg
-- name: old-granary-field-granaryfield-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-alberto-giacometti.jpg
-- name: walled-garden-walled-garden-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-post-modern.jpg
-- name: cargo-ship-cargo-ship-on-sea-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-space-pizza.jpg
-- name: old-door-lock-old-door-lock-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-pablo-blue.jpg
-- name: oldroad-old-road-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-really-hot.jpg
-- name: old-cabin-oldcabin-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-blue-electricity.jpg
-- name: 35562068104_fa20c57575-wave.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35562068104_fa20c57575-wave.jpg
-- name: carry-load-carryload-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-smoking-cigarette.jpg
-- name: copper-circuit-crow-stkump-waterfront.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-crow-stkump-waterfront.jpg
-- name: fence-fence-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-yellow-collage.jpg
-- name: copper-circuit-old-gas-station_36680991076_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-gas-station_36680991076_o.jpg
-- name: stories-freeway-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-freeway-atari-missle.jpg
-- name: stalin-time-seattle-public-market_36725946605_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-seattle-public-market_36725946605_o.jpg
-- name: supreme-court-supremecourt-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-colored-circuits.jpg
-- name: catacombs-catacombs-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-matrix.jpg
-- name: old-granary-field-granaryfield-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-blue-circuit.jpg
-- name: white-house-whitehouse-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-green-zuma.jpg
-- name: old-gas-pumps-oldgaspumps-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-graham-sutherland.jpg
-- name: abe-lincoln-one-umberto-bocc-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-umberto-bocc-file-00-00-15-87.jpg
-- name: border-fence-border-fence-on-hill-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-kand-two.jpg
-- name: copper-circuit-down-side-street-shop-sign.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-down-side-street-shop-sign.jpg
-- name: docks-docks-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-ww2-dresden.jpg
-- name: cargo-ship-cargo-ship-on-sea-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-crabapple.jpg
-- name: old-gas-pumps-oldgaspumps-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-diego-rivera1.jpg
-- name: old-barn-old-barn-1500-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-kand-two.jpg
-- name: mosaic-face-mosaic-face-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-light-dali.jpg
-- name: school-clouds-church-clouds-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-deep-connections.jpg
-- name: bluelake-purple-pond-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-purple-pond-file-00-00-00-00.jpg
-- name: bf-skinner-high-speed-train-station.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-high-speed-train-station.jpg
-- name: rockingchair-rockingchair-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-atari-missle.jpg
-- name: trucksilo-trucksilo-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-purple-pond.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-colorful-blocks.jpg
-- name: server-cloud1-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-free-woman.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-free-woman.jpg
+layout: post
+title: The US Narrative for December 19, 2019
+source: http://kinlane.com/2019/12/19/the-us-narrative-today/
+domain: the.us.narrative.today.kinlane.com
+stories:
+- title: Camp Comeca To Be Sold By Methodist Church, Negotiations Are Ongoing
+  paper: 'Lexington Clipper-Herald '
+  city: Lexington
+  state: Nebraska
+  domain: http://www.lexch.com/
+  link: https://lexch.com/news/camp-comeca-to-be-sold-by-methodist-church-negotiations-are/article_4829a5be-20ff-11ea-9860-477ce85d2db5.html
+- title: Exxons Win Means More Climate Lawsuits
+  paper: 'The Baytown Sun '
+  city: Baytown
+  state: Texas
+  domain: http://www.baytownsun.com/
+  link: http://baytownsun.com/opinion/article_27799274-21f0-11ea-9974-9f8f028e30a4.html
+- title: Paint Lick Is Looking Good
+  paper: 'Richmond Register '
+  city: Richmond
+  state: Kentucky
+  domain: http://www.richmondregister.com/
+  link: https://www.richmondregister.com/community/paint-lick-is-looking-good/article_6eb6f712-e84b-5981-bc80-758e34df7a0f.html
+- title: Commonly Misused And Abused Drugs In America
+  paper: 'Business Times '
+  city: New Haven
+  state: Connecticut
+  domain: http://www.ctbusinesstimes.com/
+  link: https://www.ctbusinesstimes.com/2018/04/18/commonly-misused-and-abused-drugs-in-america/
+- title: Wildling Moon By Holiday Mathis
+  paper: 'Boston Herald '
+  city: Boston
+  state: Massachusetts
+  domain: http://www.bostonherald.com/
+  link: https://www.bostonherald.com/2019/12/19/wildling-moon-by-holiday-mathis-11/
+- title: Ranfranz And Vine Funeral Homes
+  paper: 'Post-Bulletin '
+  city: Rochester
+  state: Minnesota
+  domain: http://www.postbulletin.com/
+  link: https://www.postbulletin.com/tributes/obituaries/ranfranz-and-vine-funeral-homes/image_3143ed2d-1ccf-5eac-b3ac-deeb0c89ebba.html
+- title: Marcus Fleming, Ronald Delancy
+  paper: 'Valley News '
+  city: White River Junction
+  state: Vermont
+  domain: http://www.vnews.com/
+  link: https://www.gvnews.com/national/sports/marcus-fleming-ronald-delancy/image_bf9f2cf4-7ab1-5242-bf33-dcbefd1c3a8b.html
+- title: Federer Says A Star's Legacy Isn't At Risk With Late Decline
+  paper: 'Kerrville Daily Times '
+  city: Kerrville
+  state: Texas
+  domain: http://www.dailytimes.com/
+  link: https://www.valdostadailytimes.com/sports/national_sports/federer-says-a-star-s-legacy-isn-t-at-risk/image_7bf6a2da-e4a1-5a11-9280-2d0691683f73.html
+- title: Parker And Hazel Briley
+  paper: 'Herald-Times '
+  city: Bloomington
+  state: Indiana
+  domain: http://www.hoosiertimes.com/
+  link: https://www.hoosiertimes.com/parker-and-hazel-briley/image_7d7fe794-203e-11ea-81b1-1fc29ef05a3b.html
+- title: Pence Steps In As Rally Crowd Grows Restless For Trump
+  paper: 'Aspen Daily News '
+  city: Aspen
+  state: Colorado
+  domain: http://www.aspendailynews.com/
+  link: https://www.aspendailynews.com/associated_press/pence-steps-in-as-rally-crowd-grows-restless-for-trump/article_82ce6b19-706a-5184-86b2-18e02f6f2c5d.html
+- title: Reynolds Ignites Newburyport Hockey's Season As Clippers Fly Past Pentucket
+  paper: 'The Daily News '
+  city: Newburyport
+  state: Massachusetts
+  domain: http://www.newburyportnews.com/
+  link: https://www.newburyportnews.com/sports/local_sports/reynolds-ignites-newburyport-hockey-s-season-as-clippers-fly-past/image_ec47761f-8b69-52f0-b8fd-b1f6c4377027.html
+- title: Doug Collins Debates Impeachment
+  paper: 'Tifton Gazette '
+  city: Tifton
+  state: Georgia
+  domain: http://www.tiftongazette.com/
+  link: https://www.tiftongazette.com/news/ga_fl_news/doug-collins-debates-impeachment/image_a9dbd8dc-8710-5163-9f8e-4af468fb7d9a.html
+- title: Companies Sue To Block Open Records Request By Lawmaker
+  paper: 'Memphis Flyer '
+  city: Memphis
+  state: Tennessee
+  domain: http://www.memphisflyer.com/
+  link: https://www.memphisflyer.com/NewsBlog/archives/2019/12/18/companies-sue-to-block-open-records-request-by-lawmaker
+- title: William Francis Bill Kindel, Sr
+  paper: 'Mountain Statesman '
+  city: Clarksburg
+  state: West Virginia
+  domain: http://www.mountainstatesman.com/
+  link: https://mountainstatesman.com/article/william-francis-bill-kindel-sr
+- title: As House Convenes On Impeachment, Trump Declares Disbelief
+  paper: 'The Daily Nonpareil '
+  city: Council Bluffs
+  state: Iowa
+  domain: http://www.nonpareilonline.com/
+  link: https://www.nonpareilonline.com/news/national/wire/as-house-convenes-on-impeachment-trump-declares-disbelief/image_054fe4c1-a51b-52da-8243-077b93636d5d.html
+- title: Rams Win Eighth Straight County Girls Weightlifting Title
+  paper: 'Palatka Daily News '
+  city: Palatka
+  state: Florida
+  domain: http://www.palatkadailynews.com/
+  link: http://www.palatkadailynews.com/sports/rams-win-eighth-straight-county-girls-weightlifting-title
+- title: Stefanik Remains Behind Trump
+  paper: 'Press-Republican '
+  city: Plattsburgh
+  state: New York
+  domain: http://www.pressrepublican.com/
+  link: https://www.pressrepublican.com/news/local_news/stefanik-remains-behind-trump/article_83a3e277-f8dc-5715-88b8-970ca20e7247.html
+- title: City Gets Grant For Water Treatment
+  paper: 'The South Reporter '
+  city: Holly Springs
+  state: Mississippi
+  domain: http://www.southreporter.com
+  link: https://www.southreporter.com/news/city-gets-grant-water-treatment
+- title: United Way Donations To Be Doubled
+  paper: 'Snyder Daily News '
+  city: Snyder
+  state: Texas
+  domain: http://www.snyderdailynews.com/
+  link: https://www.snyderdailynews.com/united-way-donations-be-doubled
+- title: Nebraska Lutheran Boys Take Down Giltner
+  paper: 'York News Times '
+  city: York
+  state: Nebraska
+  domain: http://www.yorknewstimes.com/
+  link: https://www.yorknewstimes.com/sports/nebraska-lutheran-boys-take-down-giltner/article_78ad9760-2210-11ea-b07b-43259fac5d33.html
 ---
-
+Camp Comeca To Be Sold By Methodist Church, Negotiations Are Ongoing.&nbsp;Exxons Win Means More Climate Lawsuits.&nbsp;Paint Lick Is Looking Good.&nbsp;Commonly Misused And Abused Drugs In America.&nbsp;Wildling Moon By Holiday Mathis.&nbsp;Ranfranz And Vine Funeral Homes.&nbsp;Marcus Fleming, Ronald Delancy.&nbsp;Federer Says A Star's Legacy Isn't At Risk With Late Decline.&nbsp;
